# nlp-sql-data-generator-live

./: .env.example  .gitignore  README.md  config.example.yaml  diagnose_dbs.py  pyproject.toml
frontend/: index.html
frontend/assets/: chat.js  styles.css
notebooks/: nlp_sql_colab.ipynb  requirements.txt
scripts/: seed_sample_dbs.py
src/nlp_sql/: __init__.py  __main__.py  api.py  cli.py  config.py  deps.py  engine_map.py  executor.py  keyword_search.py  llm_sql.py  models.py  pipeline.py  registry.py  safety.py  schema_prompt.py
src/nlp_sql/auth/: __init__.py  permissions.py  service.py  tokens.py
src/nlp_sql/gateway/: __init__.py  data_service.py  schema_service.py
src/nlp_sql/routers/: __init__.py  auth.py  data.py  nlp.py  schema.py
