[project]
name = "nlp-sql-data-generator"
version = "0.1.0"
description = "Multi-database schema search + NLP text-to-SQL with safe read-only execution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "sqlalchemy>=2.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "rapidfuzz>=3.0",
  "typer>=0.12",
  "rich>=13.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
mysql = ["pymysql>=1.1"]
mssql = ["pyodbc>=5.0", "pymssql>=2.3.0"]
all-drivers = ["psycopg[binary]>=3.2", "pymysql>=1.1", "pyodbc>=5.0", "pymssql>=2.3.0"]

[project.scripts]
nlp-sql = "nlp_sql.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
only-include = ["src/nlp_sql"]
